k8s/infra/hermes-agent/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hermes
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hermes.chenwx.top`)
      kind: Rule
      services:
        - name: hermes
          namespace: cwx
          port: 9119
